crates/aw-core/tests/snapshots/schema_roundtrip__file_close.snap
---
source: crates/aw-core/tests/schema_roundtrip.rs
expression: json_of(event)
---
{
  "evidence": {
    "level": "E1"
  },
  "handle": 21990232555523,
  "kind": "file_close",
  "modified": false,
  "path": null,
  "proc": {
    "pid": 5120,
    "tid": 5120,
    "uid": "0x9f3a11c2d4e5f601"
  },
  "seq": 106,
  "session_id": 7,
  "source": "linux.ebpf/sys_enter_close",
  "ts_mono_ns": 5021000106,
  "ts_wall_ns": 1791273662000000000,
  "v": 1
}
