crates/aw-core/tests/snapshots/schema_roundtrip__file_create.snap
---
source: crates/aw-core/tests/schema_roundtrip.rs
expression: json_of(event)
---
{
  "evidence": {
    "level": "E1"
  },
  "is_dir": true,
  "kind": "file_create",
  "path": "/tmp/new-dir",
  "proc": {
    "pid": 5120,
    "tid": 5120,
    "uid": "0x9f3a11c2d4e5f601"
  },
  "seq": 107,
  "session_id": 7,
  "source": "linux.ebpf/lsm_file_open",
  "ts_mono_ns": 5021000107,
  "ts_wall_ns": 1791273662000000000,
  "v": 1
}
