crates/aw-core/tests/snapshots/schema_roundtrip__file_open.snap
---
source: crates/aw-core/tests/schema_roundtrip.rs
expression: json_of(event)
---
{
  "access": "read",
  "created": false,
  "evidence": {
    "level": "E1"
  },
  "handle": 21990232555523,
  "kind": "file_open",
  "path": "/tmp/placeholder.txt",
  "path_resolved": true,
  "proc": {
    "pid": 5120,
    "tid": 5120,
    "uid": "0x9f3a11c2d4e5f601"
  },
  "result": 0,
  "seq": 103,
  "session_id": 7,
  "source": "linux.ebpf/lsm_file_open",
  "truncated": false,
  "ts_mono_ns": 5021000103,
  "ts_wall_ns": 1791273662000000000,
  "v": 1,
  "via": "syscall"
}
