crates/aw-core/tests/snapshots/schema_roundtrip__file_read.snap
---
source: crates/aw-core/tests/schema_roundtrip.rs
expression: json_of(event)
---
{
  "bytes": 412,
  "evidence": {
    "level": "E1"
  },
  "handle": 21990232555523,
  "kind": "file_read",
  "offset": 0,
  "path": null,
  "proc": {
    "pid": 5120,
    "tid": 5120,
    "uid": "0x9f3a11c2d4e5f601"
  },
  "seq": 104,
  "session_id": 7,
  "source": "linux.ebpf/sys_exit_read",
  "ts_mono_ns": 5021000104,
  "ts_wall_ns": 1791273662000000000,
  "v": 1,
  "via": "syscall"
}
